This file documents the revision history for the SNClient+ agent.

next:
         - fix check_mount checking options

0.21     Thu Mar 28 17:18:25 CET 2024
         - add http config ini includes
         - add osx pkg uninstaller
         - add check_eventlog support for unique-index (mlueckert)
         - add check_os_version add os name
         - add os and version to inventory
         - add check_mount windows volumes
         - add check_drivesize total macros
         - make doc tables long lines more readable
         - enable script aliases without enabling external scripts
         - update windows build framework to wix 3.14.1
         - rename build artifacts to use less confusing name (amd/arm)
         - check_mount make fstype comparison case insensitive
         - change minimum golang requirement to 1.22
         - fix check_files max-depth and empty-syntax
         - fix check_memory human readable free value

0.20     Fri Mar 15 14:12:35 CET 2024
         - add support for perf-syntax
         - check_wmi: add performance data
         - check_wmi: add support for empty-syntax
         - update check_nsc_web to v0.7.1
         - check_service: fix json error
         - update windows build framework to wix 3.14
         - improve wmi stability
         - add regexp replacement macro post processor
         - add if/else conditionals to *-syntax templates
         - check_drivesize: does not use parent folder anymore automatically. Use folder=...if required
         - fix windows ps1 wrapped scripts
         - check_ntp_offset: add support for other languages
         - fix timeout for checks over nrpe

0.19     Wed Feb 28 00:09:39 CET 2024
         - write startup errors to default logfile
         - add check_os_updates
         - check_files: fix skipping folder to early
         - check_eventlog: fix using event id
         - check_drivesize: add freespace-ignore-reserved option
         - fix wrapped scripts not found